--- a/resource/index.html
+++ b/resource/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span> Subject </span>
+                    Hi, I'm <span data-cy="person-name" data-person-name="person-name"> Subject </span>
                     Developer
                 </h1>
                 <p>
